--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".LibraryActivity" />
         <activity android:name=".RecipeActivity" />
-        <activity android:name=".SearchActivity" />
+        <activity android:name=".SearchActivity"
+            android:windowSoftInputMode="adjustNothing"/>
         <activity android:name=".InstructionsActivity" />
         <activity android:name=".AboutActivity"></activity>
     </application>
