re-fixed bug + changed search behaviour
    * Now, when a NOT operation is performed, the list is checked
      for any recipes that have that ingredient/style/country, and
      if so, are removed from the list.
    * also, that keyboard/search box bug from the last commit wasn't
      really fixed
	* solved it by using a TableLayout for the SearchActivity elements
	  rather than Vertical Layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity android:name=".LibraryActivity" />
         <activity android:name=".RecipeActivity" />
         <activity android:name=".SearchActivity"
-            android:windowSoftInputMode="adjustNothing"/>
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".InstructionsActivity" />
         <activity android:name=".AboutActivity"></activity>
     </application>
